# swagger.json
@@ -86,6 +86,16 @@
           }
         }
       }
+    },
+    "/auth/google": {
+      "get": {
+        "summary": "Login with Google",
+        "responses": {
+          "200": {
+            "description": "User logged in with Google successfully"
+          }
+        }
+      }
     }
   }
 }
